<resources>
    <string name="app_name">සුපිරි පොල</string>
    <string name="splashcreen_tittle">සුපිරි පොල</string>
    <string name="splashcreen_subtittle">ආයුබෝවන්</string>
    <string name="harti_name_sinhala">හෙක්ටර් කොබ්බෑකඩුව ගොවි කටයුතු පර්යේෂණ හා පුහුණු කිරීමේ ආයතනය</string>
    <string name="harti_name_english">Hector Kobbekaduwa Agrarian Research and Training Institute</string>
    <string name="harti_name_tamil">ஹெக்டர் கொப்பேகடுவ கமநல ஆராய்ச்சி, பயிற்சி நிறுவகம</string>
    <string name="dev_by">Arthur C Clarke Institute for Modern Technologies</string>
    <string name="dev_by_sinhala">නවීන තාක්ෂණ පිළබඳ ආතර් සී ක්ලාක් ආයතනය</string>
    <string name="selectactivity_tittle">Please select your preferred\nlanguage to continue</string>
    <string name="selectactivity_sinhala">සිංහල</string>
    <string name="selectactivity_english">English</string>
    <string name="selectactivity_tamil">தமிழ்</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">සුපිරි පොල</string>
    <string name="nav_header_subtitle">ආයුබෝවන්</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_changelan">Change Language</string>
    <string name="menu_home">මුල් පිට</string>
    <string name="menu_gallery">විකුණුම්</string>
    <string name="menu_slideshow">මිලදී ගැනීම</string>
    <string name="menu_home_tamil">வீடு</string>
    <string name="menu_gallery_tamil">விற்பனை</string>
    <string name="menu_slideshow_tamil">මිලදී ගැනීම</string>
    <string name="menu_home_english">Home</string>
    <string name="menu_gallery_english">Selling</string>
    <string name="menu_slideshow_english">මිලදී ගැනීම</string>
    <string name="menu_tools">දැන්වීම්</string>
    <string name="menu_share">ඹබගේ ගිනුම</string>
    <string name="menu_send">පැමිණිලි</string>
    <string name="menu_register">ලියාපදිංචිය</string>
    <string name="tamil_menu_tools_tamil">விளம்பரம்</string>
    <string name="tamil_menu_share_tamil">உங்கள் கணக்கு</string>
    <string name="tamil_menu_send_tamil">உங்கள் கணக்கு</string>
    <string name="tamil_menu_register_tamil">பதிவு</string>
    <string name="tamil_menu_tools_english">Advertisement</string>
    <string name="tamil_menu_share_english">Your Account</string>
    <string name="tamil_menu_send_english">Complaints</string>
    <string name="tamil_menu_register_english">Registration</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="sinhala_mainpage_thogamila">තොග මිල</string>
    <string name="sinhala_mainpage_illuma">ඉල්ලුම</string>
    <string name="sinhala_mainpage_sapayuma">විකුණුම්</string>
    <string name="sinhala_mainpage_todayprice">අද මිල</string>
    <string name="tamil_mainpage_sapayuma_tamil">விற்பனை</string>
    <string name="tamil_mainpage_todayprice_tamil">இன்றைய விலை</string>
    <string name="tamil_mainpage_sapayuma_english">Selling</string>
    <string name="tamil_mainpage_todayprice_english">Today Price</string>
    <string name="sinhala_mainpage_elawalu">එලවලු</string>
    <string name="sinhala_mainpage_palathuru">පලතුරැ</string>
    <string name="sinhala_mainpage_vee">වී</string>
    <string name="tamil_mainpage_elawalu_tamil">காய்கறி</string>
    <string name="tamil_mainpage_palathuru_tamil">பழம்</string>
    <string name="tamil_mainpage_vee_tamil">மற்றும்</string>
    <string name="tamil_mainpage_elawalu_english">Vegetables</string>
    <string name="tamil_mainpage_palathuru_english">Fruits</string>
    <string name="tamil_mainpage_vee_english">Vee</string>
    <string name="sinhala_mainpage_sahal">සහල්</string>
    <string name="sinhala_mainpage_dhanya">ධාන්‍ය</string>
    <string name="sinhala_mainpage_pol">පොල්</string>
    <string name="tamil_mainpage_sahal_tamil">அரிசி</string>
    <string name="tamil_mainpage_dhanya_tamil">விதைகள்</string>
    <string name="tamil_mainpage_pol_tamil">தேங்காய்</string>
    <string name="tamil_mainpage_sahal_english">Rice</string>
    <string name="tamil_mainpage_dhanya_english">Grain</string>
    <string name="tamil_mainpage_pol_english">Coconut</string>
    <string name="sinhala_mainpage_mas">මස්</string>
    <string name="sinhala_mainpage_maalu">මාලු</string>
    <string name="sinhala_mainpage_karawala">කරවල</string>
    <string name="tamil_mainpage_mas_tamil">இறைச்சி</string>
    <string name="tamil_mainpage_maalu_tamil">மீன்</string>
    <string name="tamil_mainpage_karawala_tamil">கருவாடு</string>
    <string name="tamil_mainpage_mas_english">Meat</string>
    <string name="tamil_mainpage_maalu_english">Fish</string>
    <string name="tamil_mainpage_karawala_english">Dry Fish</string>
    <string name="sinhala_mainpage_kiri">කිරි</string>
    <string name="sinhala_mainpage_biththara">බිත්තර</string>
    <string name="sinhala_mainpage_pani">පැණි</string>
    <string name="tamil_mainpage_kiri_tamil">பால்</string>
    <string name="tamil_mainpage_biththara_tamil">முட்டைகள்</string>
    <string name="tamil_mainpage_pani_tamil">ஹனி</string>
    <string name="tamil_mainpage_kiri_english">Milk</string>
    <string name="tamil_mainpage_biththara_english">Eggs</string>
    <string name="tamil_mainpage_pani_english">Honey</string>
    <string name="sinhala_mainpage_kulubadu">කුළුබඩු</string>
    <string name="sinhala_mainpage_palawarga">පලාවර්ග</string>
    <string name="sinhala_mainpage_miris">මිරිස්</string>
    <string name="tamil_mainpage_kulubadu_tamil">மசாலா</string>
    <string name="tamil_mainpage_palawarga_tamil">இலைகள்</string>
    <string name="tamil_mainpage_miris_tamil">மிளகாய்</string>
    <string name="tamil_mainpage_kulubadu_english">Spices</string>
    <string name="tamil_mainpage_palawarga_english">Green leaves</string>
    <string name="tamil_mainpage_miris_english">Chilli</string>
    <string name="sinhala_mainpage_pela">පැළ</string>
    <string name="sinhala_mainpage_beeja">බීජ</string>
    <string name="sinhala_mainpage_bimmal">බිම් මල්</string>
    <string name="tamil_mainpage_pela_tamil">தாவரங்கள்</string>
    <string name="tamil_mainpage_beeja_tamil">விதை</string>
    <string name="tamil_mainpage_bimmal_tamil">காளான்</string>
    <string name="tamil_mainpage_pela_english">Plants</string>
    <string name="tamil_mainpage_beeja_english">Seeds</string>
    <string name="tamil_mainpage_bimmal_english">Mushrooms</string>
    <string name="sinhala_mainpage_thel">තෙල්</string>
    <string name="sinhala_mainpage_ala">අල</string>
    <string name="sinhala_mainpage_maanshaboga">මාංශ බෝග</string>
    <string name="tamil_mainpage_thel_tamil">எண்ணெய்</string>
    <string name="tamil_mainpage_ala_tamil">உருளைக்கிழங்கு</string>
    <string name="tamil_mainpage_maanshaboga_tamil">இறைச்சி பயிர்களின் மேலாண்மை</string>
    <string name="tamil_mainpage_thel_english">Oil</string>
    <string name="tamil_mainpage_ala_english">Potatoes</string>
    <string name="tamil_mainpage_maanshaboga_english">Meat Crops</string>
    <string name="sinhala_mainpage_mal">මල්</string>
    <string name="sinhala_mainpage_apanayanaboga">අපනයන බෝග</string>
    <string name="sinhala_mainpage_aayurwedashaka">ආයුර්වේද ශාක</string>
    <string name="tamil_mainpage_mal_tamil">மலர்</string>
    <string name="tamil_mainpage_apanayanaboga_tamil">ஏற்றுமதிப் பயிர்கள்</string>
    <string name="tamil_mainpage_aayurwedashaka_tamil">ஆயுர்வேத தாவரங்கள்</string>
    <string name="tamil_mainpage_mal_english">Flowers</string>
    <string name="tamil_mainpage_apanayanaboga_english">Export Crops</string>
    <string name="tamil_mainpage_aayurwedashaka_english">Ayurvedic plants</string>
    <string name="sinhala_mainpage_helabojun">හෙළ බොජුන්</string>
    <string name="sinhala_mainpage_athkam">අත්කම්</string>
    <string name="sinhala_mainpage_gap">ගැප්</string>
    <string name="tamil_mainpage_helabojun_tamil">வணக்கம் போஜூன்</string>
    <string name="tamil_mainpage_athkam_tamil">கைவினை</string>
    <string name="tamil_mainpage_gap_tamil">Gap</string>
    <string name="tamil_mainpage_helabojun_english">Hela Bojun</string>
    <string name="tamil_mainpage_athkam_english">Crafts</string>
    <string name="tamil_mainpage_gap_english">Gap</string>
    <string name="sinhala_mainpage_goviupakarana">කෘෂි උපකරණ</string>
    <string name="sinhala_mainpage_prawahana">ප්‍රවාහන</string>
    <string name="sinhala_mainpage_krushishramikayin">කෘෂි ශ්‍රමිකයන්</string>
    <string name="tamil_mainpage_goviupakarana_tamil">விவசாய உபகரணங்கள்</string>
    <string name="tamil_mainpage_prawahana_tamil">போக்குவரத்து</string>
    <string name="tamil_mainpage_krushishramikayin_tamil">விவசாய கூலி</string>
    <string name="tamil_mainpage_goviupakarana_english">Agricultural Equipment</string>
    <string name="tamil_mainpage_prawahana_english">Transport</string>
    <string name="tamil_mainpage_krushishramikayin_english">Agricultural Laborers</string>
    <string name="sinhala_mainpage_sathwapalana">සත්ව පාලන</string>
    <string name="sinhala_mainpage_pohora">පොහොර</string>
    <string name="tamil_mainpage_sathwapalana_tamil">கால்நடை வளர்ப்பு</string>
    <string name="tamil_mainpage_pohora_tamil">உரம்</string>
    <string name="tamil_mainpage_sathwapalana_english">Animal Control</string>
    <string name="tamil_mainpage_pohora_english">Fertilizer</string>
    <string name="sinhala_mainpage_oushada">ඔෘෂධ</string>
    <string name="sinhala_mainpage_luunu">ලූනුු</string>
    <string name="sinhala_mainpage_wenathbooga">වෙනත් බෝග</string>
    <string name="Login_subtittle">ඔබගේ ගිණුමට ඇතුල් වන්න</string>
    <string name="Login_subtittle_forgotpass">මුර පදය අමතකද?</string>
    <string name="Login_subtittle_athulwanna">තහවුරු කරන්න</string>
    <string name="Login_subtittle_ginumaknathida">ඔබට ගිණුමක් නැතිද? සකසා ගන්න</string>
    <string name="Login_subtittle_tamil">உங்கள் கணக்கில் உள்நுழைக</string>
    <string name="Login_subtittle_forgotpass_tamil">கடவுச்சொல் மறந்துவிட்டதா?</string>
    <string name="Login_subtittle_athulwanna_tamil">உள்நுழைய</string>
    <string name="Login_subtittle_ginumaknathida_tamil">உங்களிடம் கணக்கு இல்லையா?</string>
    <string name="Login_subtittle_english">Please Login</string>
    <string name="Login_subtittle_forgotpass_english">Forgot Password?</string>
    <string name="Login_subtittle_athulwanna_english">Log In</string>
    <string name="Login_subtittle_ginumaknathida_english">Dont have account? Register Now</string>
    <string name="s_register_tittle">අලෙවිය සදහා ලියාපදිංචිය</string>
    <string name="s_register_name">නම</string>
    <string name="s_register_nic">ජා.හැ.අ</string>
    <string name="s_register_gender">ස්ත්‍රී පුරුෂ භාවය</string>
    <string name="s_register_gender_female">ස්ත්‍රී</string>
    <string name="s_register_gender_male">පුරුෂ</string>
    <string name="s_register_address">ලිපිනය</string>
    <string name="s_register_phone">දුරකථන අංකය</string>
    <string name="s_register_district">දිස්ත්‍රික්කය</string>
    <string name="s_register_govicenter">ගොවිජන සේවා මධ්‍යස්ථානය</string>
    <string name="s_register_submit">තහවුරු කරන්න</string>
    <string name="s_register_pass">මුර පදය</string>
    <string name="s_register_comfpass">මුර පදය තහවුරු කරන්න</string>
    <string name="s_register_tittle_tamil">விற்பனைக்கு பதிவு</string>
    <string name="s_register_name_tamil">பெயர்</string>
    <string name="s_register_nic_tamil">தேசிய அடையாள அட்டை எண்</string>
    <string name="s_register_gender_tamil">பாலினம்</string>
    <string name="s_register_gender_female_tamil">பெண்கள்</string>
    <string name="s_register_gender_male_tamil">ஆண்கள்</string>
    <string name="s_register_address_tamil">முகவரி</string>
    <string name="s_register_phone_tamil">தொலைபேசி எண்</string>
    <string name="s_register_district_tamil">மாவட்டம்</string>
</resources>