<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <!--<item android:title="Communicate">-->
    <group android:id="@+id/nav_bottom">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_warning_black_24dp"
                android:title="@string/menu_send" />

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/menu_register" />
    </group>


</menu>
