<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/language_select_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_marginTop="150dp"
        android:src="@drawable/hartinewlogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">


<TextView
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:textSize="12sp"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorWhite"
    android:layout_width="match_parent"
    android:text="@string/selectactivity_tittle"
    android:layout_height="wrap_content"/>

        <Button
            android:onClick="btnEnglish"
            android:id="@+id/selectbtn_english"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="15sp"
            android:background="@drawable/roundedwhitebackground"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/selectactivity_english"
            android:layout_width="130dp"
            android:layout_height="40dp"
            />

        <Button
            android:onClick="btnSinhala"
            android:id="@+id/selectbtn_sinhala"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="15sp"
            android:background="@drawable/roundedwhitebackground"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/selectactivity_sinhala"
            android:layout_width="130dp"
            android:layout_height="40dp"
            />


        <Button
            android:onClick="btnTamil"
            android:id="@+id/selectbtn_tamil"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="15sp"
            android:background="@drawable/roundedwhitebackground"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/selectactivity_tamil"
            android:layout_width="130dp"
            android:layout_height="40dp"
            />






    </LinearLayout>


</LinearLayout>